--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,20 +27,20 @@ jobs:
    - run: mkdir -p "${GOPATH_BASE}"
    - run: mkdir -p "${GOPATH_HEAD}/bin"
        
-   #- run:
-   #   name: Testing application
-   #   command: |
-   #       go test \
-   #       github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
-                    
    - run:
-      name: Build application container
+      name: Testing application
       command: |
-          go install --ldflags '-extldflags "-static"' \
-          github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME};
-          [ ! -e bin ] && mkdir bin;
-          cp "${GOPATH_HEAD}/bin/${CIRCLE_PROJECT_REPONAME}" bin/invoicer;
-          docker build -t ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME} .;
+          go test \
+          github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}
+                    
+   #- run:
+   #   name: Build application container
+   #   command: |
+   #       go install --ldflags '-extldflags "-static"' \
+   #       github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME};
+   #       [ ! -e bin ] && mkdir bin;
+   #       cp "${GOPATH_HEAD}/bin/${CIRCLE_PROJECT_REPONAME}" bin/invoicer;
+   #       docker build -t ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME} .;
     
    - run:
       name: Run application in background
