--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,11 +42,11 @@ jobs:
    #       cp "${GOPATH_HEAD}/bin/${CIRCLE_PROJECT_REPONAME}" bin/invoicer;
    #       docker build -t ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME} .;
     
-   - run:
-      name: Run application in background
-      command: |
-           docker run ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}
-           background: true
+   #- run:
+   #   name: Run application in background
+   #   command: |
+   #        docker run ${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}
+   #        background: true
    
    - run:
       name: ZAP baseline scan of application
