--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,8 @@ jobs:
         docker run -t owasp/zap2docker-weekly zap-baseline.py \
           -u https://raw.githubusercontent.com/dr0mi0/invoicer-chapter2/master/zap-baseline.conf \
         #  -u https://raw.githubusercontent.com/${DOCKER_REPO}/${CIRCLE_PROJECT_REPONAME}/master/zap-baseline.conf \
-          -t http://172.17.0.2:8080/ || \
+        #  -t http://172.17.0.2:8080/ || \
+          -t http://$(ip -f inet -o addr show docker0 | awk '{print $4}' | cut -d '/' -f 1):10080 || \
         if [ $? -ne 1 ]; then exit 0; else exit 1; fi;
         )
 
